@@ -2,12 +2,14 @@ v3.8.0:
  Users:
   - Import tomograms, CTFs and Transformation matrices (IMOD): added import functionality using the pattern {TS} to
     select the substring that will be considered as tsId.
-  - Import TS: fix the heterogeneous set of TS validation using a range of angles.
+  - Import TS:
+    * Fix the heterogeneous set of TS validation using a range of angles.
+    * Multiple TS can be imported without the label {TS}.
   - Join heterogeneous sets are possible for tomography objects TS and tomograms.
   - New protocol correct tilt offset: It allows to correct the tilt offset of a tilt series
   - Fix the protocol tomograms to micrographs. Helps enhanced. ImageHandler replaced by mrcfile.
   - Import from Mdoc: more precise error when calculating the dose. GUI log with more information.
-  - TS viewer: Deleting excluded views and creating a new TS stack
+  - TS viewer: Deleting excluded views and creating a new TS stack.
  Developers:
   - Attribute _acquisition is initialized as None in TSBase, so the coppyAttributes callen in protocol for joining.
     sets work properly. The same whith the attribute _origin.
